# macro-polo

./: .readthedocs.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: release.yml  static-analyses.yml
docs/: conf.py  index.rst  pretty_codec.py  requirements.txt
docs/_ext/: expandmacros.py  runscript.py
docs/intro/: index.rst
docs/intro/macro_rules/: index.rst  reference.rst  techniques.rst  tutorial.rst
docs/intro/macro_rules/_scripts/: tutorial0_3.py
docs/intro/proc_macros/: index.rst
docs/reference/: index.rst
docs/reference/macro_polo/: codec.rst  index.rst  match.rst  parse.rst  tokens.rst  transcribe.rst
docs/reference/macro_polo/macros/: index.rst  macro_rules.rst  predefined.rst  proc.rst
examples/: bijection.py  braces_and_more.py  nqueens.py  nqueens.pym
examples/macro_rules/: counting_with_null.py  negative_lookahead.py
examples/proc_macros/: braces.py
examples/proc_macros.py/: braces.py
macro_polo/: macros.py
pymacros/: __init__.py  macros.py  match.py  transcribe.py
pymacros/parse/: _matchers.py  _transcribers.py  _utils.py
src/macro_polo/: __init__.py  __main__.py  codec.py  match.py  tokens.py  transcribe.py
src/macro_polo/macros/: __init__.py  decorator.py  function.py  importer.py  macro_rules.py  module.py  predefined.py  proc.py  super.py  types.py
src/macro_polo/parse/: _matchers.py  _transcribers.py  _utils.py
