[project]
name = "pymacros"
dynamic = ["version"]


[tool.ruff]
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["D", "I"]
ignore = [
    "D105",  # undocumented-magic-method
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2
