[project]
name = "macro_polo"
description = "Rust-style macros for Python"
dynamic = ["version"]
requires-python = ">= 3.12"
authors = [
    {name = "Benjy Wiener"},
]
readme = "README.md"
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
version = {path = "src/macro_polo/__init__.py"}

[tool.hatch.build.targets.wheel.force-include]
"src/macro_polo.pth" = "macro_polo.pth"

[tool.ruff]
target-version = "py312"
exclude = ["examples"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["D", "I"]
ignore = [
    "D105",  # undocumented-magic-method
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.pyright]
pythonVersion = "3.12"
ignore = ["examples"]
